Fix templates typing. Activate tsconfig strictTemplates and noImplicitOverride

--- a/bot/admin/web/src/app/analytics/activity/activity.component.html
+++ b/bot/admin/web/src/app/analytics/activity/activity.component.html
@@ -160,7 +160,7 @@
           title="Messages by days in calendar"
           [chartPreferences]="userPreferences"
           type="Calendar"
-          isMultiChart="false"
+          [isMultiChart]="false"
           [isLoading]="messagesByDaysLoading"
         ></tock-chart>
       </nb-card-body>
