--- a/bot/admin/web/src/app/analytics/behavior/behavior.component.html
+++ b/bot/admin/web/src/app/analytics/behavior/behavior.component.html
@@ -71,7 +71,7 @@
           title="Messages by Story"
           type="PieChart"
           [chartPreferences]="userPreferences"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
@@ -86,7 +86,7 @@
           title="Messages by Intent"
           type="PieChart"
           [chartPreferences]="userPreferences"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
@@ -101,7 +101,7 @@
           title="Messages by Day of Week"
           type="PieChart"
           [chartPreferences]="userPreferences"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
@@ -116,7 +116,7 @@
           title="Messages by Hour of Day"
           type="PieChart"
           [chartPreferences]="userPreferences"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
@@ -134,7 +134,7 @@
           [chartPreferences]="userPreferences"
           [filter]="filter"
           (intentChanged)="waitAndRefresh()"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
@@ -150,7 +150,7 @@
           title="Messages by Story Category"
           type="PieChart"
           [chartPreferences]="userPreferences"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
@@ -166,7 +166,7 @@
           title="Messages by Story Type"
           type="PieChart"
           [chartPreferences]="userPreferences"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
@@ -181,7 +181,7 @@
           title="Messages by Locale"
           type="PieChart"
           [chartPreferences]="userPreferences"
-          isMultiChart="false"
+          [isMultiChart]="false"
         ></tock-chart>
       </nb-card-body>
     </nb-card>
