--- a/bot/admin/web/src/app/bot/feature/application-feature/application-features-table/application-features-table.component.html
+++ b/bot/admin/web/src/app/bot/feature/application-feature/application-features-table/application-features-table.component.html
@@ -104,7 +104,7 @@
               fieldSize="small"
               class="date-field"
               placeholder="start date"
-              (keyup.enter)="changeStartDate(f, $event)"
+              (keyup.enter)="changeStartDate(feature, $event)"
               [(ngModel)]="feature.startDate"
               [nbDatepicker]="startDate"
               (ngModelChange)="changeStartDate(feature, $event)"
