--- a/bot/admin/web/src/app/bot/i18n/i18n-import/i18n-import.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n-import/i18n-import.component.html
@@ -23,7 +23,7 @@
       <tock-form-control
         label="Answers dump file"
         name="importFile"
-        required="true"
+        [required]="true"
         [controls]="file"
         [showError]="isImportSubmitted"
       >
