--- a/bot/admin/web/src/app/bot/i18n/i18n.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n.component.html
@@ -52,7 +52,7 @@
 ></tock-no-data-found>
 
 <tock-sticky-menu
-  offset="300"
+  [offset]="300"
   *ngIf="!loading && filteredI18n.length"
 >
   <div class="d-flex justify-content-between align-items-center">
