--- a/bot/admin/web/src/app/bot/story/search-story/stories-upload/stories-upload.component.html
+++ b/bot/admin/web/src/app/bot/story/search-story/stories-upload/stories-upload.component.html
@@ -8,7 +8,7 @@
       <tock-form-control
         label="Stories dump file"
         name="importFile"
-        required="true"
+        [required]="true"
         [controls]="file"
         [showError]="isImportSubmitted"
       >
