--- a/bot/admin/web/src/app/metrics/indicators/indicators-edit/indicators-edit.component.html
+++ b/bot/admin/web/src/app/metrics/indicators/indicators-edit/indicators-edit.component.html
@@ -118,13 +118,13 @@
         >
           <ng-container *ngFor="let valueDefinition of values.controls; let i = index">
             <div
-              [formGroup]="valueDefinition"
+              [formGroup]="$any(valueDefinition)"
               class="row"
             >
               <div class="col-10 pr-0">
                 <tock-form-control
                   name="valueLabel"
-                  [controls]="valueDefinition.controls.label"
+                  [controls]="$any(valueDefinition).controls.label"
                   [showError]="isSubmitted"
                   [required]="true"
                 >
