--- a/bot/admin/web/src/app/rag/rag-sources/source-normalization/csv/source-normalization-csv.component.html
+++ b/bot/admin/web/src/app/rag/rag-sources/source-normalization/csv/source-normalization-csv.component.html
@@ -38,7 +38,7 @@
       <tock-form-control
         label="Textual content"
         name="content"
-        required="true"
+        [required]="true"
         [controls]="content"
         [showError]="isSubmitted"
       >
