--- a/bot/admin/web/src/app/shared/bot-message/bot-message-choice.component.html
+++ b/bot/admin/web/src/app/shared/bot-message/bot-message-choice.component.html
@@ -23,7 +23,7 @@
   <button
     (click)="click()"
     nbButton
-    color="{{ url() ? 'warn' : 'primary' }}"
+    status="{{ url() ? 'warn' : 'primary' }}"
     class="choice"
     [nbTooltip]="title() ? title() + ' - ' + parameters() : parameters()"
   >
