--- a/nlp/admin/web/src/app/try/try.component.html
+++ b/nlp/admin/web/src/app/try/try.component.html
@@ -63,7 +63,7 @@
 <br />
 <tock-sentence-analysis
   *ngIf="sentence"
-  [(sentence)]="sentence"
+  [sentence]="sentence"
   (closed)="onClose()"
   [displayProbabilities]="true"
   [minimalView]="false"
