--- a/bot/admin/web/src/app/analytics/dialogs/dialogs-list/dialogs-list.component.html
+++ b/bot/admin/web/src/app/analytics/dialogs/dialogs-list/dialogs-list.component.html
@@ -139,7 +139,7 @@
                 [avatar]="getUserAvatar(action)"
               >
                 <div
-                  *ngIf="action.metadata.isGenAiRagAnswer"
+                  *ngIf="$any(action).metadata.isGenAiRagAnswer"
                   class="mt-3 text-right"
                 >
                   <button
