--- a/bot/admin/web/src/app/bot/story/search-story/stories-list/stories-list.component.scss
+++ b/bot/admin/web/src/app/bot/story/search-story/stories-list/stories-list.component.scss
@@ -1,6 +1,6 @@
 .table-list {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 8rem;
+  grid-template-columns: 3fr 2fr 8rem 2fr 8rem;
   column-gap: 0.5rem;
   min-width: 50rem;
 
