--- a/bot/admin/web/src/app/theme/styles/styles.scss
+++ b/bot/admin/web/src/app/theme/styles/styles.scss
@@ -46,6 +46,7 @@ $grid-gutter-width: 15px;
 @import 'bootstrap/scss/close';
 @import 'bootstrap/scss/utilities';
 @import 'bootstrap/scss/print';
+@import 'bootstrap/scss/list-group';
 
 @import './layout';
 @import './overrides';
