Hot-fix-Tock-Studio-Temporarily-remove-intent-story-details-in-intents

--- a/nlp/admin/web/src/app/intents/intents-list/intents-list.component.html
+++ b/nlp/admin/web/src/app/intents/intents-list/intents-list.component.html
@@ -7,7 +7,8 @@
   <div class="table-list-entry bordered text-center">Shared Intents</div>
   <div class="table-list-entry bordered text-center">Mandatory States</div>
   <div class="table-list-entry bordered text-center">Story</div>
-  <div class="table-list-entry text-center">Actions</div>
+  <!-- To be restored after bot/nlp merge -->
+  <!-- <div class="table-list-entry text-center">Actions</div> -->
 </div>
 <div
   class="table-list"
@@ -135,7 +136,8 @@
     </button>
   </div>
 
-  <div class="table-list-entry bordered text-center">
+  <!-- To be restored after bot/nlp merge -->
+  <!-- <div class="table-list-entry bordered text-center">
     <button
       nbButton
       ghost
@@ -145,7 +147,7 @@
     >
       <nb-icon icon="book-open-outline"></nb-icon>
     </button>
-  </div>
+  </div> -->
 
   <div class="table-list-entry text-center">
     <div
